--- a/nms_app/views/partials/header.ejs
+++ b/nms_app/views/partials/header.ejs
@@ -17,13 +17,13 @@
 
 							<li><a href="" class="peers fxw-nw td-n p-20 bdB c-grey-800 cH-blue bgcH-grey-100">
 									<div class="peer mR-15"><img class="w-3r bdrs-50p" src="/assets/user.svg" alt=""></div>
-									<div class="peer peer-greed"><span><span class="fw-500">Moo Doe</span> <span class="c-grey-600">liked your <span class="text-dark">cover image</span></span></span>
+									<div class="peer peer-greed"><span><span class="fw-500">Aman</span> <span class="c-grey-600">generated <span class="text-dark">fault 101</span></span></span>
 										<p class="m-0"><small class="fsz-xs">7 mins ago</small></p>
 									</div>
 								</a></li>
 							<li><a href="" class="peers fxw-nw td-n p-20 bdB c-grey-800 cH-blue bgcH-grey-100">
 									<div class="peer mR-15"><img class="w-3r bdrs-50p" src="/assets/user.svg" alt=""></div>
-									<div class="peer peer-greed"><span><span class="fw-500">Lee Doe</span> <span class="c-grey-600">commented on your <span class="text-dark">video</span></span></span>
+									<div class="peer peer-greed"><span><span class="fw-500">Samyak</span> <span class="c-grey-600">genrated <span class="text-dark">fault 102</span></span></span>
 										<p class="m-0"><small class="fsz-xs">10 mins ago</small></p>
 									</div>
 								</a></li>
@@ -43,10 +43,10 @@
 										<div>
 											<div class="peers jc-sb fxw-nw mB-5">
 												<div class="peer">
-													<p class="fw-500 mB-0">John Doe</p>
+													<p class="fw-500 mB-0">Aman</p>
 												</div>
 												<div class="peer"><small class="fsz-xs">5 mins ago</small></div>
-											</div><span class="c-grey-600 fsz-sm">Want to create your own customized data generator for your app...</span>
+											</div><span class="c-grey-600 fsz-sm">Hello Nms Admin...</span>
 										</div>
 									</div>
 								</a></li>
@@ -56,10 +56,10 @@
 										<div>
 											<div class="peers jc-sb fxw-nw mB-5">
 												<div class="peer">
-													<p class="fw-500 mB-0">Moo Doe</p>
+													<p class="fw-500 mB-0">Samyak</p>
 												</div>
 												<div class="peer"><small class="fsz-xs">15 mins ago</small></div>
-											</div><span class="c-grey-600 fsz-sm">Want to create your own customized data generator for your app...</span>
+											</div><span class="c-grey-600 fsz-sm">How are you admin...</span>
 										</div>
 									</div>
 								</a></li>
@@ -69,10 +69,10 @@
 										<div>
 											<div class="peers jc-sb fxw-nw mB-5">
 												<div class="peer">
-													<p class="fw-500 mB-0">Lee Doe</p>
+													<p class="fw-500 mB-0">Aman Adhikari</p>
 												</div>
 												<div class="peer"><small class="fsz-xs">25 mins ago</small></div>
-											</div><span class="c-grey-600 fsz-sm">Want to create your own customized data generator for your app...</span>
+											</div><span class="c-grey-600 fsz-sm">Hello There Sup ?...</span>
 										</div>
 									</div>
 								</a></li>
